--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
     <meta name="referrer" content="no-referrer" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
     <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
+    <link rel="stylesheet" href="//unpkg.com/element-plus/dist/index.css" />
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
   <body style="margin: 0 0 0 0; background-color: #f5f5f5">
